--- a/PetaFF/PetaFF/appsettings.json
+++ b/PetaFF/PetaFF/appsettings.json
@@ -1,13 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=VERNER;Database=PetaFF;Trusted_Connection=True;TrustServerCertificate=True;Integrated Security=True"
+    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=PetaFF;Integrated Security=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft": "Debug",
-      "Microsoft.Hosting.Lifetime": "Debug",
-      "Microsoft.AspNetCore": "Debug"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*"
