--- a/PetaFF/PetaFF/appsettings.json
+++ b/PetaFF/PetaFF/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PetaFF;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "YandexMaps": {
+    "ApiKey": "4c3c3c3c-3c3c-3c3c-3c3c-3c3c3c3c3c3c"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
